# youtube-downloader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vdl/: __init__.py  cli.py  downloader.py
tests/: conftest.py  test_cli.py  test_downloader.py
