[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vdl"]

[project]
name = "video-downloader"
version = "0.1.0"
description = "Download YouTube and Facebook videos as MP4 and MP3"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "typer[all]>=0.12.0",   # incluye Rich automáticamente
]

[project.scripts]
vdl = "vdl.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 88
src = ["src"]