[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vdl"]

[project]
name = "video-downloader"
version = "0.1.0"
description = "Download YouTube and Facebook videos as MP4 and MP3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "typer[all]>=0.12.0",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0"
]

[project.scripts]
vdl = "vdl.cli:app"

[tool.pytest.ini_options]
# testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 88
src = ["src"]
